# cryptonight-hash

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
benches/: benchmarks.rs
src/: aesni.rs  lib.rs  u64p.rs
src/aes/: constants.rs  mod.rs  u64p.rs
tests/: hash_tests.rs
