[package]
name = "cryptonight"
version = "0.1.0"
authors = ["Bert Peters <bert@bertptrs.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.8.1"
sha3 = "0.8.2"
slice-cast = "0.1.2"
tiny-keccak = "1.5.0"

# Hashes needed for implementing the final step
blake-hash = "0.3.1"
groestl = "0.8.0"
jh-x86_64 = "0.2.2"
skein-hash = "0.3.0"

[dev-dependencies]
criterion = "0.3.0"
hex = "0.4.0"
hex-literal = "0.2.1"

[[bench]]
name = "benchmark"
harness = false
